# TheLinuxProgrammingInterface

exercise/: CMakeLists.txt  e3_1.c  e4_1.c  e4_2.c  e5_2.c  e5_3.c
exercise/5/: 4.c  5.c  CMakeLists.txt  e5_3.c
exercise/6/: 1.c  CMakeLists.txt
exercise/lib/: CMakeLists.txt  tlpi_hdr.h
exercise/test/: CMakeLists.txt  is_seqnum_sv.c
tlpi-dist/: CHANGES
tlpi-dist/namespaces/: ns_child_exec.c
